IDE 快速清理